--- a/.devcontainer/development-compose.yml
+++ b/.devcontainer/development-compose.yml
@@ -15,6 +15,9 @@ services:
       - "80:80"
     networks:
       - development
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
     volumes:
       - ../:/workspace:delegated
       - /var/run/docker.sock:/var/run/docker.sock
