--- a/src/AnnoFlow.Api/appsettings.Development.json
+++ b/src/AnnoFlow.Api/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "Cors": {
+    "Origins": [
+      "http://localhost:5000"
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
