--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,12 @@
 {
-    "name": "AnnoFlow",
+    "name": "devcontainer",
     "workspaceFolder": "/workspace",
-    "service": "vscode",
+    "service": "devcontainer",
     "dockerComposeFile": "./development-compose.yml",
     "extensions": [
-        "ms-dotnettools.csharp"
+        "k--kato.docomment",
+        "ms-dotnettools.csharp",
+        "jchannon.csharpextensions"
     ],
     "shutdownAction": "stopCompose"
 }
